samples/_failures_safe/1761704512_a2e8c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5c3ebd1.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_e5c3ebd1.c:158:5: error: expected declaration or statement at end of input
  158 |     }
      |     ^
